--- a/ApiGateway/Dockerfile
+++ b/ApiGateway/Dockerfile
@@ -19,4 +19,7 @@ RUN dotnet build "ApiGateway.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "ApiGateway.csproj" -c Release -o /app/publish
 
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "ApiGateway.dll"]
